--- a/home.html
+++ b/home.html
@@ -1,3 +1,4 @@
+<html>
 <title>
 SHOPPING DISTRICT
 </title>
@@ -5,3 +6,5 @@ SHOPPING DISTRICT
 <body>
 <h1> Welcome to Shopping district </h1>
 </body>
+</html>
+
