--- a/home.html
+++ b/home.html
@@ -4,9 +4,7 @@ SHOPPING DISTRICT
 </title>
 
 <body>
-<h1> Welcome to Shopping district </h1>
-<h2>Hello</h2>
-<h2>How</h2>
+<h1> Welcome to Shopping district </h1>g
 </body>
 </html>
 
