--- a/home.html
+++ b/home.html
@@ -4,7 +4,8 @@ SHOPPING DISTRICT
 </title>
 
 <body>
-<h1> Welcome to Shopping district </h1>g
+<h1> Welcome to Shopping district </h1>
+<h2> The one place for all you shopping needs</h2>
 </body>
 </html>
 
